--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
 html, body {
     margin: 0;
     padding: 0;
-    /* font-family: ; */
 }
 .container {
     max-width: 1600px;
@@ -23,12 +22,25 @@ h2 {
     display: inline-block;
     max-width: 100%;
 }
-/******************************** шапка  *********************************/
+.section-about .about-content h2,
+.section-menu h2,
+.section-menu .menu-dishes .dish,
+.section-reservations .column-data h2 {
+    color: #cc9900;
+}
+.section-menu h2::after,
+.section-about .about-content h2:after,
+.section-reservations .column-data h2::after
+ {
+    content: url(image/Divider.yellow.png);
+    display: block;
+}
+/******************************** Шапка  *********************************/
 header {
     z-index: 1;
-    position: relative;
+    position: absolute;
     height: 159px;
-    max-width: 1600px;
+    width: 100%;
     margin: 0 auto;
     background: -moz-linear-gradient(top, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
     background: -webkit-linear-gradient(top, rgba(0,0,0,0.7) 0%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
@@ -59,8 +71,8 @@ header nav ul li a {
     color: white;
     font-size: 21px;
     display: inline-block;
-    font-family: 'GentiumBookBasic';
-    font-weight: bold;
+    font-family: 'Gentium Book Basic', serif;
+    /* font-weight: bold; */
     padding: 0 20px;
 }
 header nav ul li:hover {
@@ -87,7 +99,7 @@ header .nav-mobile img {
 header .nav-mobile .nav-mobile-wrapper {
     display: none;
     position: absolute;
-    top: 65px;
+    top: 55px;
     right: -15px;
     background-color: rgb(214, 168, 15);
     -webkit-box-shadow: 0px 1px 2px 2px rgba(0,0,0,0.75);
@@ -114,11 +126,14 @@ header .nav-mobile:hover .nav-mobile-wrapper {
     display: block;
 }
 /******************************* Верхняя секция ******************************/
-.section-home .container {
-    margin-top: -159px;
-    height: 750px;
-    text-align: center;
+.section-home {
     background-image: url(image/Bg.png);
+    background-position: center center;
+    background-size: cover;
+}
+.section-home .container {
+    height: 100vh;
+    text-align: center;
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
@@ -131,9 +146,18 @@ header .nav-mobile:hover .nav-mobile-wrapper {
     color: white;
     margin: 0 10px;
 }
-h1:after {
+.section-home .tracery:after {
     content: url(image/Divider.png);
     display: block;
+    /* Почему узор не такой яркий стал? Как поправить? */
+    content: "";
+    background-image: url(image/Divider.png);
+    width: 230px;
+    height: 40px;
+    position: relative;
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin: 35px auto;
 }
 .section-home .home-buttons .button {
     color: white;
@@ -144,21 +168,21 @@ h1:after {
 }
 .section-home .home-buttons .button--dark {
     background-color: #00000093;
-    border: none;
+    border: 1px solid #00000093;
 }
 .section-home .home-buttons .button--light {
     background-color: #ffffff36;
     margin-left: 30px;
-    border-color: white;
-    border-style: solid;
-    border-width: 1px;
-    padding: 18px 50px;
+    border: 1px solid white;
 }
 /******************************* Вторая секция "С ТАРЕЛКОЙ" ******************************/
-
-.section-about .container {
-    height: 710px;
+.section-about {
     background-image: url(image/Section\ Background.png);
+    background-position: center center;
+    background-size: cover;
+}
+.section-about .container {
+    height: 100vh;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
@@ -167,37 +191,41 @@ h1:after {
     text-align: center;
 }
 .section-about .about-content {
-    display: flex;
+    /* display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: space-around;
-    align-items: center;
+    align-items: center; */
     margin: 0 30px 0 10px;
 }
 .section-about .about-content h2 {
-    color: #cc9900;
     margin-bottom: 15px;
 }
 .section-about .about-content p {
-    font-family: 'Lato';
+    width: 408px;
+    font-family: 'Lato', sans-serif;
     font-size: 16px;
     line-height: 1.5;
     color: #4c4c4c;
 }
-.section-about .about-content .item {
+.section-about .about-content .img-tracery {
     margin-bottom: 16px;
 }
-.section-about .about-content .item2 {
+.section-about .about-content .img-photo-cook {
     margin-top: 30px;
-    margin-left: 60px;
+    padding-left: 60px;
 }
 .section-about .about-img {
     margin-top: 55px;
 }
 /******************************* Третья секция "ИНГРЕДИЕНТЫ" ******************************/
-.section-ingredients .container {
+.section-ingredients {
     background-image: url(image/Background\ Section\ -\ Ingredients.png);
-    height: 758px;
+    background-position: center center;
+    background-size: cover;
+}
+.section-ingredients .container {
+    height: 100vh;
 }
 .section-ingredients .ingredients-content {
     width: 570px;
@@ -206,52 +234,55 @@ h1:after {
     right: 215px;
     top: 100px;
     background-color: #00000093;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    justify-content: center;
-    align-items: center;
     color: white;
     text-align: center;
 }
 .section-ingredients .ingredients-content h2 {
     margin-bottom: 16px;
+    margin-top: 83px;
 }
 .section-ingredients .ingredients-content .tracery {
     margin-bottom: 14px;
 }
+.section-ingredients .ingredients-content p {
+    width: 409px;
+    margin: 16px auto;
+    font-family: 'Lato', sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+}
 .section-ingredients .img-ingredients {
-    margin-top: 76px;
+    margin-top: 60px;
 }
 .section-ingredients .second-ingredient {
     margin: 0 40px;
 }
 /******************************* Четвертая секция "МЕНЮ" ******************************/
-.section-menu .container {
-    height: 994px;
+.section-menu {
     background-image: url(image/Background\ Section\ Menu.png);
+    background-position: center center;
+    background-size: cover;
+}
+.section-menu .container {
+    max-width: 1200px;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
 }
 .section-menu .container .menu-column {
-    width: 455px;
-    margin: 0 70px;
+    width: 50%;
 }
 .section-menu h2 {
     text-align: center;
     margin: 41px 0 16px 0;
-}
-.section-menu h2::after {
-    content: url(image/Divider.yellow.png);
-    display: block;
 }
 .section-menu .menu-dishes .dish-area {
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 .section-menu .menu-dishes .dish {
     display: flex;
@@ -268,10 +299,6 @@ h1:after {
     line-height: 1.5;
     color: #4c4c4c;
     margin: 13px 0 29px 0;
-}
-.section-menu h2,
-.section-menu .menu-dishes .dish {
-    color: #cc9900;
 }
 .section-menu .menu-dishes .dish p {
     margin: 0 0 9px 0;
@@ -305,9 +332,13 @@ h1:after {
     margin-bottom: 8px;
 }
 /******************************* Пятая секция "СКОВОРОДОЧКА" ******************************/
-.section-reviews .container {
-    height: 758px;
+.section-reviews {
     background-image: url(image/Background\ Section\ Content.png);
+    background-position: center center;
+    background-size: cover;
+}
+.section-reviews .container {
+    height: 100vh;
     color: white;
     display: flex;
     flex-direction: column;
@@ -337,9 +368,9 @@ h1:after {
     top: 160px;
 }
 .section-reviews .quote .comments {
-    font-family: 'GentiumBookBasic';
+    font-family: 'Gentium Book Basic', serif;
     font-size: 25px;
-    font-weight: bold;
+    /* font-weight: bold; */
     line-height: 1.8;
     text-align: center;
     color: #dde0df;
@@ -352,9 +383,14 @@ h1:after {
     margin: 0;
 }
 /******************************* Шестая секция "РЕЗЕРВАЦИЯ" ******************************/
-.section-reservations .container {
-    height: 708px;
+.section-reservations {
     background-image: url(image/Section\ Background.png);
+    background-position: center center;
+    background-size: cover;
+}
+.section-reservations .container {
+    max-width: 1200px;
+    height: 100vh;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -376,22 +412,17 @@ h1:after {
     margin: 0 15px;
 }
 .section-reservations .column-data {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    display: block;
     width: 430px;
+    /* width: 43%; */
     margin: 0 10px 0 45px;
 }
 .section-reservations .column-data h2 {
     line-height: 0.67;
-    color: #cc9900;
     text-align: center;
     margin: 0;
 }
 .section-reservations .column-data h2::after {
-    content: url(image/Divider.yellow.png);
-    display: block;
     margin: 20px 0;
 }
 .section-reservations .column-data p {
@@ -405,12 +436,12 @@ h1:after {
 .section-reservations .column-data form {
     display: flex;
     /* flex-direction: row;
-    flex-wrap: wrap; */
+    flex-wrap: wrap; cокращение*/
     flex-flow: row wrap;
     justify-content: space-between;
 }
 .section-reservations .column-data form label {
-    font-family: 'OpenSans';
+    font-family: 'OpenSans', sans-serif;
     font-size: 14px;
     font-weight: bold;
     color: #c9a131;
@@ -439,15 +470,19 @@ h1:after {
     font-family: 'OpenSans';
     font-size: 16px;
     color: #ffffff;
-    margin-top: 33px;
+    /* margin-top: 33px; */
+    margin: 33px auto 0;
     cursor: pointer;
 }
 /******************************* ФУТЕР  ******************************/
 footer {
     position: relative;
-    max-width: 1600px;
+    width: 100%;
     height: 320px;
     background-color: #191919;
+}
+footer .container {
+    max-width: 1600px;
     margin: 0 auto;
     display: flex;
     flex-flow: row nowrap;
@@ -487,7 +522,7 @@ footer .footer-column .img-margin {
 /****************************************************************************/
 /******************************* АДАПТИВНОСТЬ  ******************************/
 @media (max-width: 1385px) {
-    header {
+    header .container {
         display: flex;
         flex-flow: row nowrap;
         justify-content: center;
@@ -503,9 +538,6 @@ footer .footer-column .img-margin {
     }
 }
 @media (max-width: 1100px) {
-    .section-menu .container .menu-column {
-        margin: 0 10px;
-    }
     .section-reservations .column-img {
         margin-right: 5px;
     }
@@ -515,7 +547,7 @@ footer .footer-column .img-margin {
 }
 @media (max-width: 1060px) {
     .section-about .container {
-        height: 1200px;
+        height: auto;
         flex-flow: column nowrap;
         background-attachment: fixed;
     }
@@ -545,28 +577,21 @@ footer .footer-column .img-margin {
     /* ************ */
     .section-home .container {
         height: 500px;
-        margin-top: -100px;
     }
     .section-home h1 {
         font-size: 55px;
     }
-    .section-home h1:after {
-        content: "";
-        background-image: url(image/Divider.png);
+    .section-home .tracery:after {
         width: 150px;
         height: 30px;
-        position: relative;
-        background-size: contain;
-        background-repeat: no-repeat;
         margin: 10px auto;
     }
     .section-home .home-buttons .button {
         font-size: 12px;
-        padding: 16px 40px;
+        padding: 14px 38px;
     }
     .section-home .home-buttons .button--light {
         margin-left: 10px;
-        padding: 14px 38px;
     }
     /* *************** */
     .section-reservations .container {
@@ -596,11 +621,28 @@ footer .footer-column .img-margin {
 @media (max-width: 960px) {
     .section-menu .container {
         flex-flow: column nowrap;
-        height: 1800px;
         background-attachment: fixed;
     }
+    .section-menu .container .menu-column {
+        width: auto;
+    }
 }
-@media (max-width: 830px) {
+@media (max-width: 840px) {
+    header nav ul li:hover {
+        border-top: none;
+    }
+    header nav {
+        display: none;
+    }
+    header .container {
+        justify-content: space-around;
+    }
+    header .nav-mobile {
+        display: block;
+        width: 45px;
+        height: 45px;
+    }
+    /* ************** */
     .section-ingredients .container {
         height: 550px;
     }
@@ -609,10 +651,8 @@ footer .footer-column .img-margin {
         height: 457px;
     }
     .section-ingredients .ingredients-content h2 {
-        margin-bottom: 16px;
-    }
-    .section-ingredients .ingredients-content .tracery {
-        margin-bottom: 14px;
+        margin-bottom: 8px;
+        margin-top: 40px;
     }
     .section-ingredients .img-ingredients {
         margin-top: 30px;
@@ -647,17 +687,6 @@ footer .footer-column .img-margin {
         width: 180px;
     }
     /* **************** */
-    header nav {
-        display: none;
-    }
-    header {
-        justify-content: space-around;
-    }
-    header .nav-mobile {
-        display: block;
-        width: 45px;
-        height: 45px;
-    }
     footer {
         height: 185px;
     }
@@ -717,26 +746,54 @@ footer .footer-column .img-margin {
         height: 40px;
     }
     /* ************ */
-    .section-reviews .container {
+    .section-home .tracery:after {
+        width: 100px;
+        height: 20px;
+        margin: 10px auto;
+    }
+    .section-home .container {
         height: 350px;
     }
+    .section-home h1 {
+        font-size: 40px;
+    }
+    .section-home .home-buttons .button {
+        font-size: 10px;
+        padding: 10px 28px;
+    }
+    .section-home .home-buttons .button--light {
+        margin-left: 10px;
+    }
+    /* ************** */
+    .section-reviews .container {
+        min-height: 350px;
+        height: auto;
+    }
     .section-reviews .quote {
-        width: 360px;
-        height: 270px;
+        width: auto;
+        height: auto;
+        padding: 0 25px;
     }
     .section-reviews .quote h2 {
         font-size: 18px;
+        margin-top: 30px;
     }
     .section-reviews .quote .backtick {
-        font-size: 40px;
+        font-size: 35px;
         top: 78px;
-        left: 15px;
+        left: 8px;
     }
     .section-reviews .quote .comments {
         font-size: 12px;
+        max-width: 360px;
+    }
+    .section-reviews .quote .comments br {
+        display: none;
     }
     .section-reviews .quote .signature {
         font-size: 10px;
+        margin-top: -15px;
+        margin-bottom: 35px;
     }
     .section-reviews .quote img {
         height: 14px;
@@ -744,27 +801,34 @@ footer .footer-column .img-margin {
     }
     /* *********** */
     .section-ingredients .container {
-        height: 400px;
+        min-height: 400px;
+        height: auto;
     }
     .section-ingredients .ingredients-content {
-        width: 320px;
-        height: 277px;
+        width: auto;
+        height: auto;
     }
     .section-ingredients .ingredients-content h2 {
         font-size: 21px;
-        margin-bottom: 16px;
+        margin-bottom: 5px;
+        margin-top: 20px;
     }
     .section-ingredients .img-ingredients {
         margin-top: 15px;
+        margin-bottom: 10px;
+        padding: 0 5px;
     }
     .section-ingredients .second-ingredient {
         margin: 0 10px;
     }
     .section-ingredients .ingredients-content p {
-        margin: 0;
+        width: auto;
+        max-width: 308px;
+        padding: 0 10px;
+        margin: 0 auto;
         font-size: 12px;
     }
-    .section-ingredients .ingredients-content img {
+    .section-ingredients .ingredients-content .tracery {
         height: 14px;
         width: 140px;
     }
@@ -772,32 +836,7 @@ footer .footer-column .img-margin {
         height: 75px;
         width: 75px;
     }
-    /* ************* */
-    .section-home .container {
-        height: 350px;
-        margin-top: -75px;
-    }
-    .section-home h1 {
-        font-size: 40px;
-    }
-    h1:after {
-        margin: 10px 0;
-    }
-    .section-home .home-buttons .button {
-        font-size: 10px;
-        padding: 12px 30px;
-    }
-    .section-home .home-buttons .button--light {
-        margin-left: 10px;
-        padding: 10px 28px;
-    }
     /* *************** */
-    .section-menu .container {
-        height: 1500px;
-    }
-    .section-menu .container .menu-column {
-        width: 370px;
-    }
     .section-menu h2 {
         font-size: 30px;
     }
@@ -825,10 +864,14 @@ footer .footer-column .img-margin {
         width: 370px;
         padding: 6px 9px 10px 10px;
     }
+    .section-menu .menu-dishes .dop-spec {
+        height: 22px;
+    }
     .section-menu .menu-dishes .area-salads .spec,
     .section-menu .menu-dishes .area-main .spec {
         font-size: 12px;
-        margin-left: 300px;
+        position: absolute;
+        right: 0px;
     }
     /* *********************** */
     .section-reservations .column-data {
@@ -851,34 +894,71 @@ footer .footer-column .img-margin {
     }
     .section-reservations .column-data p {
         font-size: 14px;
+        padding: 0 10px;
+    }
+    .section-reservations .column-data p br {
+        display: none;
     }
     .section-reservations .column-data form input {
         width: 170px;
     }
 }
 @media (max-width: 450px) {
-    .section-about .container {
-        height: 1000px;
-    }
     .section-about .about-content {
         margin: 0 10px;
     }
     .section-about .about-content h2 {
         font-size: 30px;
     }
+    .section-about .about-content h2:after {
+        content: "";
+        background-image: url(image/Divider.yellow.png);
+        width: 200px;
+        height: 18px;
+        position: relative;
+        background-size: contain;
+        background-repeat: no-repeat;
+        margin: 5px auto 0;
+    }
     .section-about .about-content p {
+        width: auto;
         font-size: 14px;
     }
-    .section-about .about-content .item {
+    .section-about .about-content .img-tracery {
         margin-bottom: 0;
         height: 20px;
         width: 200px;
     }
     /* ************** */
     .section-reservations .container {
-        height: 850px;
+        height: auto;
+        padding: 20px 0;
     }
     .section-reservations .column-img {
         margin: 0 10px;
+    }
+    .section-reservations .column-data {
+        width: auto;
+        margin: 0;
+    }
+    .section-reservations .column-data form {
+        padding: 0 10px;
+    }
+    .section-reservations .column-data form {
+        justify-content: space-around;
+    }
+    /* ***************** */
+    .section-menu .menu-dishes .wrapped {
+        width: auto;
+    }
+    .section-menu .menu-dishes .special {
+        width: auto;
+    }
+    .section-menu .menu-dishes .dish-area {
+        padding: 0 10px;
+    }
+    .section-menu .menu-dishes .area-salads .spec, 
+    .section-menu .menu-dishes .area-main .spec {
+        right: 10px;
     }
 }
